--- a/25_06_11.tex
+++ b/25_06_11.tex
@@ -106,21 +106,20 @@
 \vspace{-16.5pt}
 
 \begin{center}
-    \textbf{\Huge \scshape Dhruv Puri} \\ \vspace{8pt}
+    \textbf{\Huge \scshape Aditya} \\ \vspace{8pt}
     \small 
-    \faIcon{map-marker-alt}
-    \href{https://www.google.com/maps/place/bengaluru/data=!4m2!3m1!…}
-    {\underline{dhruvpuri.xyz}}
+    \faIcon{map-marker-alt}                     \href{https://www.google.com/maps/place/bengaluru/data=!4m2!3m1!…}
+    {\underline{Bengaluru}}
     \faIcon{phone}
-    \href{tel:+919149407326}
-    {\underline{+91 9149407326}}
+    \href{tel:+917204328987}
+    {\underline{+91 7204318987}}
     \faIcon{github}
-    \href{https://github.com/slashexx}{\underline{github.com/slashexx}} $  $
+    \href{https://github.com/aditzz073}{\underline{github.com/aditzz073}} $  $
     \faIcon{linkedin}
-    \href{https://linkedin.com/in/dhruvpuri-slashex}{\underline{in/dhruvpuri-slashex}} $  $
+    \href{https://linkedin.com/in/aditya-pujer}{\underline{in/aditya-pujer}} $  $
     \faIcon{envelope}
-    \href{mailto:dhruvpuri.35@gmail.com}
-    {\underline{dhruvpuri.35@gmail.com}}
+    \href{mailto:pujeradi@gmail.com}
+    {\underline{pujeradi@gmail.com}}
     
 \end{center}
 
@@ -130,17 +129,17 @@
   
     \resumeSubheading
       {Dayananda Sagar College of Engineering}{Sept. 2027}
-      {B.E. Information Science}{CGPA: 9.58}
+      {B.E. Information Science}{CGPA: 9.15}
   \resumeSubHeadingListEnd
 % -------------------- SKILLS --------------------
 \section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
     
-     \textbf{Languages}{: Java, Go, Typescript, Python} \\
+     \textbf{Languages}{: Javascript, Typescript, Python} \\
      \textbf{Frameworks and Libraries}{: Node.js, Express, Next.js} \\
      
-     \textbf{Tools}{: Linux, Git, GitHub Actions, Firebase, Docker, Kubernetes, GitOps}     
+     \textbf{Tools}{: Git, GitHub Actions,GitOps}     
      
     }}
  \end{itemize}
