--- a/25_06_11.tex
+++ b/25_06_11.tex
@@ -108,8 +108,9 @@
 \begin{center}
     \textbf{\Huge \scshape Aditya} \\ \vspace{8pt}
     \small 
-    \faIcon{map-marker-alt}                     \href{https://www.google.com/maps/place/bengaluru/data=!4m2!3m1!…}
-    {\underline{Bengaluru}}
+    \faIcon{briefcase}                     
+    \href{https://www.adityapujer.xyz}
+    {\underline{adityapujer.xyz}}
     \faIcon{phone}
     \href{tel:+917204328987}
     {\underline{+91 7204318987}}
@@ -150,12 +151,12 @@
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{\href{https://wecofy.com/}{\underline{WeCofy}}}{December 2024 – Present}
-{Full-Stack Developer: Next.js, Node.js, Express, MongoDB}{Intern · Remote}
+{\href{https://wecofy.com/}{\underline{FreeSip}}}{January 2025 – May 2025}
+{Full-Stack Developer: Next.js, Node.js, Express, Tailwind CSS}{Intern · Onsite}
 \resumeItemListStart
-  \resumeItem{Worked on \textbf{Juristo}, an \textbf{AI-powered legal platform}, building features to improve accessibility and scalability.}
-  \resumeItem{Developed a robust \textbf{developer API service} with subscription-tier logic and a \textbf{rate-limiting} based on subscription levels, supporting seamless third-party integrations.}
-  \resumeItem{Integrated \textbf{ZeptoMail} for transactional emails and \textbf{Firebase Cloud Messaging (FCM)} for real-time notifications, improving communication workflows.}
+  \resumeItem{Worked on \textbf{FreeSip}, focusing on a \textbf{ B2B marketing platform}, and building responsive UIs using \textbf{React, Vite, and Tailwind CSS}.}
+  \resumeItem{Implemented component-based architecture with effective state management and integrated \textbf{Framer Motion} for smooth UI animations and transitions.}
+  \resumeItem{Gained experience in full-stack workflows, interactive user experience design, and customized promotional website features for enhanced user engagement}
   % \resumeItem{Implemented dynamic \textbf{rate-limiting} based on subscription levels, ensuring system \textbf{efficiency} and \textbf{fair usage}.}
 \resumeItemListEnd
   
@@ -164,84 +165,60 @@
 
 
 
-\vspace{-13pt}
+\vspace{-6pt}
 
 % -------------------- PROJECTS --------------------
 \section{Projects}
     \resumeSubHeadingListStart
-    
-\resumeProjectHeading
-{\textbf{Lumine} $|$ \footnotesize\emph{Go, TypeScript, AWS, GitHub Actions, Terraform, Prometheus}}{\faIcon{github}\href{https://github.com/Nexusrex18/lumine}{ \underline{Lumine}}}
 
+\resumeProjectHeading
+{\textbf{EmberEye: AI-Powered Wildfire Risk Prediction} $|$ \footnotesize\emph{Tensorflow, CNN, FastAPI, Python}}
+{\faIcon{github}\href{https://github.com/aditzz073/ember-eye}{ \underline{Repo}}  \faIcon{link}\href{https://embereye-three.vercel.app/}{ \underline{Demo}}}
 \resumeItemListStart
-    \resumeItem{Developed an \textbf{interactive CLI tool} to automate DevOps workflows, allowing startups and developers to set up basic \textbf{CI/CD, infrastructure, and monitoring}.}
-    \resumeItem{Integrated \textbf{AWS services (ECR, ECS, S3, EKS)} using \textbf{Terraform}, enabling automated infrastructure provisioning and deployment to Dockerhub.}
-    \resumeItem{Set up a basic \textbf{monitoring} template generation using \textbf{Prometheus}, providing real-time infrastructure tracking and alerting.}
-    \resumeItem{Implemented \textbf{CI/CD pipeline automation} with \textbf{GitHub Actions} and \textbf{Jenkins}, streamlining build, test, and deployment workflows.\href{https://lumineops.vercel.app}{[\underline{Link}]}}
-    % \resumeItem{Designed a \textbf{cost estimation} feature leveraging AWS pricing APIs to help users predict infrastructure expenses.}
-    % \resumeItem{Built an \textbf{interactive CLI} that generates Terraform configurations and GitHub Actions workflows based on user input.}
+    \resumeItem{Developed an AI system to predict and visualize wildfire risks based on environmental factors and real-time weather data.}
+    \resumeItem{Built a machine learning pipeline using \textbf{Tensorflow} and \textbf{CNN models} to analyze input features and generate risk scores.}
+    \resumeItem{Created REST APIs with \textbf{FastAPI} to serve predictions and integrated them into an interactive web dashboard.}
+    \resumeItem{Enabled proactive decision-making for communities by providing clear risk visualizations and preventive insights.}
+\resumeItemListEnd
+
+\resumeProjectHeading
+{\textbf{Trash View On Maps} $|$ \footnotesize\emph{Google Maps API, Node.js, Google Street View API}}
+{\faIcon{github}\href{https://github.com/aditzz073/Trash-view-on-maps}{ \underline{Repo}}  \faIcon{link}\href{https://trash-view-on-maps.vercel.app/}{ \underline{Demo}}}
+\resumeItemListStart
+    \resumeItem{Built an interactive web game that lets players explore random street view locations from top Indian cities and identify visible trash.}
+    \resumeItem{Leveraged the \textbf{Google Maps} and \textbf{Street View APIs} to dynamically load locations and capture user feedback.}
+    \resumeItem{Implemented the backend in \textbf{Node.js}, handling location data rotation and storing user responses for future analysis.}
+    \resumeItem{Aimed to crowdsource urban cleanliness data and create awareness through gamification.}
 \resumeItemListEnd
 
 
-\vspace{-4pt}
-
 \resumeProjectHeading
-{\textbf{CodeBrewery} $|$ \footnotesize\emph{Golang, Docker, Kubernetes, GitHub Actions, TypeScript}}{\faIcon{github}\href{https://github.com/slashexx/CodeBrewery}{ \underline{CodeBrewery}}}
+{\textbf{KisanSetu} $|$ \footnotesize\emph{Node.js, Express, WebSocket, Solidity, Docker, Firebase}}
+{\faIcon{github}\href{https://github.com/slashexx/kisansetu}{ \underline{Repo}}  \faIcon{link}\href{https://kisansetu.onrender.com}{ \underline{Demo}}}
 
 \resumeItemListStart
-    \resumeItem{Developed a cutting-edge online IDE allowing users to \textbf{write, compile, and run} code across multiple languages, leveraging a \textbf{microservices architecture} with \textbf{Go} for the backend.}
-    \resumeItem{Employed \textbf{Docker} for \textbf{containerization} and \textbf{Kubernetes} for orchestration, ensuring seamless deployment and scalability.}
-    \resumeItem{Set up \textbf{CI/CD} pipelines with \textbf{GitHub Actions} and \textbf{YAML} to automate testing and deployment, improving development efficiency.\href{https://codebrewery.vercel.app}{[\underline{Link}]}}
-    % \resumeItem{Implemented thorough testing for backend services in \textbf{Go} and frontend components in \textbf{Jest} to maintain code quality.}
-    % \resumeItem{Configured \textbf{Docker Compose} for local development, streamlining project setup.}
+    \resumeItem{Developed a blockchain platform for secure contract farming agreements between farmers and buyers.}
+    \resumeItem{Integrated \textbf{smart contracts} in \textbf{Solidity} for transparent and reliable transactions.}
+    \resumeItem{Implemented features like \textbf{real-time price negotiation}, \textbf{direct communication}, and \textbf{automated payments}.}
+    \resumeItem{Deployed the application with \textbf{Docker} and used \textbf{Firebase} for authentication and data management. }
 \resumeItemListEnd
-
-% \resumeProjectHeading
-% {\textbf{KisanSetu} $|$ \footnotesize\emph{Node.js, Express, WebSocket, Solidity, Docker, Firebase}}{\faIcon{github}\href{https://github.com/slashexx/kisansetu}{\underline{Kisansetu}}}
-
-% \resumeItemListStart
-%     \resumeItem{Developed a blockchain platform for secure contract farming agreements between farmers and buyers.}
-%     \resumeItem{Integrated \textbf{smart contracts} in \textbf{Solidity} for transparent and reliable transactions.}
-%     \resumeItem{Implemented features like \textbf{real-time price negotiation}, \textbf{direct communication}, and \textbf{automated payments}.}
-%     \resumeItem{Deployed the application with \textbf{Docker} and used \textbf{Firebase} for authentication and data management. \href{kisansetu.onrender.com}{\textcolor{blue}{[Link]}}}
-% \resumeItemListEnd
 
     \resumeSubHeadingListEnd
-\vspace{-14.5pt}
+\vspace{-9.5pt}
 
- % ------------------Open source----------
-\section{Open Source Contributions}  
-\resumeSubHeadingListStart  
-
-\resumeProjectHeading  
-{\textbf{Prometheus Operator (CNCF)} $|$ \footnotesize\emph{Golang, GitHub Actions, CI/CD, actionlint}}{Nov. 2024}  
-\resumeItemListStart  
-\resumeItem{Added support for \textbf{RocketChat} as a notification reciever in AlertManagerConfig CRD. \href{https://github.com/prometheus-operator/prometheus-operator/pull/7328}{{[\underline{PR}]}}} 
-\resumeItem{Refactored the \textbf{OVHCloudSDConfig} validation logic as part of ScrapeConfig API refactor, ensuring compliance with Prometheus version requirements and improving test coverage for unsupported field handling. \href{https://github.com/prometheus-operator/prometheus-operator/pull/7238}{{[\underline{PR}]}}}  
-\resumeItem{Enhanced CI/CD reliability by implementing a \textbf{GitHub Actions workflow linter} using \textbf{actionlint}, ensuring accurate and consistent YAML configurations.\href{https://github.com/prometheus-operator/prometheus-operator/pull/7123}{{[\underline{PR}]}}}  
-\resumeItemListEnd  
-
-\resumeProjectHeading  
-{\textbf{KCL Programming Language (CNCF)} $|$ \footnotesize\emph{Rust, Crypto}}{Oct. 2024}  
-\resumeItemListStart  
-\resumeItem{Added support for \textbf{filesha512} and \textbf{fileblake3} hashing functions by contributing to the crypto module of the KCL programming language, significantly enhancing its \textbf{cryptographic capabilities}.}  
-\resumeItem{Implemented efficient file hashing operations with robust error handling, improving reliability and performance across diverse file types. \href{https://github.com/kcl-lang/kcl/pull/1697}{{[\underline{PR}]}}}  
-\resumeItemListEnd  
-
-
-\resumeSubHeadingListEnd
-
-\vspace{-11pt}  
 
 % -------------------- EXTRA-CURRICULAR --------------------
+
 \section{Extracurricular} \vspace{0.5pt}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=0.08em, topsep=1pt]
-    \item \textbf{Winner, Grand prize:} Placed 1st among 1965 participants at NITK Hackverse 5.0 hackathon.
-    % \item \textbf{Winner:} at Clone Wars.
-    \item \textbf{2nd Runner Up:} Placed 3rd amongst 1200 participants at Sandbox, the cybersecurity hackathon.
-    \item \textbf{2nd Runner Up:} HackSprint, part of Ignite 2.0
-    % \item \textbf{2nd Runner Up:} Capture the Flag Competition hosted by Point Blank 
-    \item \textbf{2* at Codechef:} Rating: 1414
-\end{itemize}
+    \item \textbf{Team Lead, Mudita, DSI} (Nov 2023 – Present): 
+    Event photographer capturing community projects like Valuable Vintage and Pawsitivity, managing social media, promoting ethics and impact through visual storytelling.
 
+    \item \textbf{Technical Team Member, Genesis, ISE} (Nov 2024 – Present): 
+    Organized initiatives like Hackman (24hr Hackathon) and Catalysis (technical fest), handling event management and innovating technical solutions.
+
+    \item \textbf{AGMTA:} Maths Quiz Winner (2018).
+
+    \item \textbf{State-Level Gold:} Athletics, Football \& Rope Skipping.
+\end{itemize}
 \end{document}
